--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <img src="img/fotoprojeto.jpeg" alt="fot dos criadores">
-
+    <p>eu sou Ana luiza, Ruan, Gabriel</p>
+    <h>eu sou Ana e gosto de ouvir musica</h>
+    <h>eu sou Gabriel e gosto de dormir</H>
+    <h>eu sou Ruan eu e gosto de trabalhar</h>
+    <p>NOSSAS HABILIDADES</p>
 
 </body>
 </html>
