--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <h>eu sou Gabriel e gosto de dormir</H>
     <h>eu sou Ruan eu e gosto de trabalhar</h>
     <p>NOSSAS HABILIDADES</p>
+    <div>
+        <p>ruan</p>
+        <p>ana</p>
+        <p>gabriel </p>
+    </div>
 
 </body>
 </html>
