--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <title>portfolio ana luiza, gabriel, ruan</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <img src="img/fotoprojeto.jpeg" alt="fot dos criadores">
-    <p>eu sou Ana luiza, Ruan, Gabriel</p>
+<body class="container text-center"></body>
+    <img src="img/fotoprojeto.jpeg" class="rounded-circle" widht="150" hught="150"> alt="fot dos criadores">
+    <p class="lead">eu sou Ana luiza, Ruan, Gabriel</p>
     <h>eu sou Ana e gosto de ouvir musica</h>
     <h>eu sou Gabriel e gosto de dormir</H>
     <h>eu sou Ruan eu e gosto de trabalhar</h>
     <p>NOSSAS HABILIDADES</p>
     <div>
-        <p>ruan</p>
-        <p>ana</p>
-        <p>gabriel </p>
+        <p class="badge text-lg-secondarij> Ruan trabalhar</p>
+        <p class="badge text-lg-secondarij> Ana cozinhar</p>
+        <p class="badge text-lg-secondarij> Gabriel, correr</p>
     </div>
 
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+    ></script>
 </body>
 </html>
