--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h>eu sou Ruan eu e gosto de trabalhar</h>
     <p>NOSSAS HABILIDADES</p>
     <div>
-        <p class="badge text-lg-secondarij> Ruan trabalhar</p>
-        <p class="badge text-lg-secondarij> Ana cozinhar</p>
-        <p class="badge text-lg-secondarij> Gabriel, correr</p>
+        <p>  class="badge text-bg-secondary > Ruan trabalhar </p>
+        <p class="badge text-bg-secondary> Ana cozinhar</p>
+        <p class="badge text-bg-secondary> Gabriel, correr</p>
     </div>
 
     <script
