--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
     <title>portfolio ana luiza, gabriel, ruan</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="container text-center"></body>
+
+<body>
+<header = "container text-center">
     <img src="img/fotoprojeto.jpeg" class="rounded-circle" widht="150" hught="150"> alt="fot dos criadores">
     <p class="lead">eu sou Ana luiza, Ruan, Gabriel</p>
     <h>eu sou Ana e gosto de ouvir musica</h>
-    <h>eu sou Gabriel e gosto de dormir</H>
+    <h>eu sou Gabriel e gosto de dormir</h>
     <h>eu sou Ruan eu e gosto de trabalhar</h>
     <p>NOSSAS HABILIDADES</p>
     <div>
-        <p>  class="badge text-bg-secondary > Ruan trabalhar </p>
-        <p class="badge text-bg-secondary> Ana cozinhar</p>
-        <p class="badge text-bg-secondary> Gabriel, correr</p>
+        <p class="badge text-bg-secondary"> Ruan, trabalhar </p>
+        <p class="badge text-bg-secondary"> Ana, cozinhar </p>
+        <p class="badge text-bg-secondary"> Gabriel, correr</p>
     </div>
+</header>
+<main class=" container>">
+    <h2>UM POUCO SOBRE NOSSAS HABILLIDADES</h2>
+    <div class="row">
+        <div class="col-md-4">
+           <div class="card" style="width: 18 rem;">
+            <img src="aqui vai a ft" class="card-img-top">
+              <div class="cars-body">
+                
+               </div>
+           </div> 
+        </div>
+    </div>
+</main>
 
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
